[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aipoint"
version = "1.0.0"
description = "PowerPoint layout fixer for AI-generated presentations"
requires-python = ">=3.8"

[project.scripts]
aipoint = "fix_pptx_gui:main"
aipoint-cli = "fix_pptx_layout:main"
